# libepc

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yaml  cmake.yml
epc/: encode.cc  encode.h  epc.cc  giai.cc  grai.cc  sgln.cc  sgtin.cc  sscc.cc  validation.cc  validation.h
include/: epc.h  giai.h  grai.h  sgln.h  sgtin.h  sscc.h  status.h
test/: encode_test.cc  giai_test.cc  grai_test.cc  sgln_test.cc  sgtin_test.cc  sscc_test.cc
